# SAW-Bench-CS-review-artifact

./: README.md  pyproject.toml  requirements.txt
annotation/: annotationNote.md  annotator_agreement.json  annotator_passes.jsonl  artifact_labeler_A_complete_pass.jsonl  artifact_labeler_B_pass.jsonl  calibration_log.csv  manual_audit_agreement.json  manual_audit_labels.csv  raw_annotation_labels.csv  rq4_calibration_log.csv
configs/: annotation_rubric.md  eval.yaml  projects_public_java_100.yaml  projects_public_maven_20.yaml  projects_public_maven_50.yaml  projects_public_maven_smoke.yaml  splits_public_java_100.yaml  splits_public_maven_20.yaml  splits_public_maven_50.yaml  splits_public_maven_smoke.yaml  spotbugs_exclude.xml
data/: saw_bench_cs.jsonl
docs/: project_errors_public_java_100.txt  public_projects.md  runtime_provenance.md
results_extra/: E11_ltr_ablation.csv  E12_ltr_cv_r5.csv  E12_ltr_regularization.csv  E12_ltr_regularization_fixed.csv  E13_saturation.csv  E14_rrf_analysis.csv  E14_rrf_hurt_cases.csv  E2_hybrid_baselines.csv  E3_feature_importance.csv  E3_ltr_baseline.csv  E4_tp_failure_analysis.csv  E5_hardneg_sensitivity.csv  E6_coverage_analysis.csv  E6_coverage_summary.json  E7_per_category_bootstrap.csv  E8_random_10k.json
results_reproduced/: attrition_breakdown.csv  bootstrap_ci.csv  diagnostics.csv  explanations.csv  explanations_scored.csv  explanations_summary.json  hardneg_metrics.csv  lopo.csv  merge_sensitivity.csv  metric_sanity_by_warning.csv  metric_sanity_summary.csv  metrics.csv  nonlocal_ablation.csv  per_category_metrics.csv  (+3 more)
(+63 files in other folders)
